Update FE and BE display format